--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    
+    <!-- language feature -->
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    
   </properties>
 
   <dependencies>
@@ -22,4 +27,5 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
 </project>
